# fastaconvtr

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  compile_fastaconvtr.sh  compile_fastaconvtr_macos.sh  fastaconvtr_help.txt  package-lock.json  run_examples_fastaconvtr.sh  run_examples_fastaconvtr_macos.sh
.github/workflows/: cmake-multi-platform.yml
Examples/: 100Kallchr.tfa.bgz  100Kallchr.tfa.bgz.tbi  100Kallchr.tfa.gz.tbi  100Kallchr07.tfa.gz.tbi  100Kallchr08.tfa.gz.tbi  100Kallchr10i14.tfa.gz.tbi  100Kallchr12i14.tfa.gz.tbi  100Kchr10_fa2ms_01.ms.txt  100Kchr10_fa2ms_02.ms.txt  100Kchr10_fa2ms_03.ms.txt  100Kchr10_fa2ms_03B.ms.txt  100Kchr10_fa2ms_04.ms.txt  100Kchr10_fa2ms_04b.ms.txt  100Kchr10_fa2ms_05.ms.txt  100Kchr10_fa2ms_06.ms.txt  100Kchr10_fa2ms_06b.ms.txt  100Kchr10_fa2ms_07.ms.txt  100Kchr10_fa2ms_08.ms.txt  100Kchr10_fa2ms_09.ms.txt  100Kchr10_fa2ms_10.ms.txt  100Kchr10_fa2ms_11.ms.txt  100Kchr10_fa2ms_12.ms.txt  100Kchr10_fa2ms_13.ms.txt  100Kchr10_fa2ms_14.ms.txt  100Kchr10_fa2ms_15.ms.txt  100Kchr10_fa2tfa_01B.tfa.gz.tbi  100Kchr10_fa2tfa_02.NonSyn.WEIGHTS.gz.tbi  100Kchr10_fa2tfa_02.tfa.gz.tbi  100Kchr10_fa2tfa_02B.NonSyn.WEIGHTS.gz.tbi  100Kchr10_fa2tfa_02B.tfa.gz.tbi  100Kchr10_fa2tfa_03.tfa.gz.tbi  100Kchr10_fa2tfa_03B.tfa.gz.tbi  100Kchr10_fa2tfa_04.tfa.gz.tbi  100Kchr10_fa2tfa_05.tfa.gz.tbi  100Kchr10_fa2tfa_06.tfa.gz.tbi  100Kchr10_fa2tfa_07.tfa.gz.tbi  100Kchr10_fa2tfa_08.tfa.gz.tbi  100Kchr10_tfa2fa_05.NonSyn.WEIGHTS.gz.tbi  100Kchr10_tfa2ms_01.ms.txt  100Kchr10_tfa2ms_02.ms.txt  (+17 more)
archive/: zutil.c  zutil.h
lib/: log.c  log.h  readme.md  tfasta.c
sources/: common.h  get_obsdatastats.c  get_obsdatastats.h  main_fasta2ms2.c  main_fasta2ms2.h  read_fasta.c  read_fasta.h  usegff2.c  usegff2.h  write_ms.c  write_ms.h
tests/: README.md  base.tests.bats  fastaconvtr.tests.bats  test_fastaconvtr.tests.bats
